src/examples/valid/condition.ra
func main(): void {
  if (1 < 2) {
    a = 1;
  } else if (2 < 3) {
    a = 2;
  } else {
    a = 3;
  }
  if (1 > 2) {
    b = 1;
  } else {
    b = 2;
  }
  if (1 == 1) {
    c = 1;
  }
  print(a, b, c);
}
