src/examples/invalid/static/primitive-index.ra
func main(): void {
  a = 1;
  a[1] = 2;
  print(a);
}
